--- a/mentor.css
+++ b/mentor.css
@@ -1,10 +1,7 @@
  /* General Styles */
  body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   background-image: url('mentor_background.avif');
-   background-repeat: no-repeat;
-   background-size: cover;
-
+  background-color: rgb(220, 218, 218);
    margin: 0;
    padding: 0;
  }
@@ -20,7 +17,7 @@
  /* Heading Styles */
  h1 {
    font-size: 2.5rem;
-   color: #fefefe;
+   color: #040202;
    margin-bottom: 40px;
    text-transform: uppercase;
    letter-spacing: 1px;
