Added linktree page

--- a/styles.css
+++ b/styles.css
@@ -270,9 +270,9 @@ body {
   border: 1px solid #ccc;
   padding: 10px; /* Adjusted padding */
   text-align: center;
-  position: relative;
+  /* position: relative; */
   /* /* background-color: #ffffff;   */
-  height: 100px; /* Fixed height for uniformity */
+  /* height: 100px; Fixed height for uniformity */
   border-radius: 8px; /* Rounded corners */
   transition: background-color 0.3s ease; /* Smooth transition */
 }
@@ -295,18 +295,20 @@ body.dark-mode .calendar-day:hover {
 .event {
   background-color: #4caf50;
   /* color: white; */
-  padding: 5px; /* Adjusted padding */
+  padding: 0 5px; /* Adjusted padding */
   border-radius: 3px;
-  font-size: 14px; /* Increased font size */
-  position: absolute;
-  bottom: 5px;
-  left: 5px;
-  right: 5px;
+  font-size: 12px; /* Increased font size */
   text-align: center;
+  height: 20px;
+  margin-bottom: 2px;
   cursor: pointer; /* Makes the event clickable */
   overflow: hidden; /* Prevents overflow of text */
   white-space: nowrap; /* Keeps text in a single line */
   text-overflow: ellipsis; /* Adds ellipsis for overflowed text */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 92px;
 }
 
 /* Responsive Adjustments */
@@ -333,7 +335,8 @@ body.dark-mode .calendar-day:hover {
   transition: background-color 0.3s;
   width: 100%;
   height: 12vh;
-  font-weight: 400;
+  font-weight: 750;
+  font-size: 18px;
   top: 0;
   margin-top: 0px;
   z-index: 1000;
@@ -374,7 +377,7 @@ body.dark-mode .calendar-day:hover {
 
 /* Logo Styling */
 .logo {
-  height: 40px;
+  height: 60px;
   transition: transform 0.3s ease;
 }
 
@@ -390,13 +393,97 @@ body.dark-mode .calendar-day:hover {
     color: #401111;
 } */
 
-.website-name {
+/* .website-name {
   font-size: 1.8rem;
   /* color: #fff; */
-  font-weight: bold;
+  /* font-weight: bold;
   letter-spacing: 1.2px;
   margin-right: auto;
   margin-left: 15px;
+} */ 
+.website-name {
+  display: flex; /* Flexbox to align items horizontally */
+  align-items: center; /* Vertically center the items */
+  margin-left: 20px;
+  margin-bottom: 5px;
+}
+ .website-name .static-text{
+  color:orangered;
+  font-size: 2.2rem;
+  font-weight: bold;
+  letter-spacing: 1.2px;
+ }
+ .website-name .dynamic-text {
+  margin-right: auto;
+  margin-left: 15px;
+   height: 50px;
+   line-height: 40px;
+   padding: 0;
+   /* overflow:hidden; */
+}
+.website-name li{
+  color: #000;
+  list-style: none;
+  font-size: 1.8rem;
+  font-weight: bold;
+  letter-spacing: 1.2px;
+  position: relative;
+  overflow: hidden;
+  width: fit-content;
+  /* display: inline-block; */
+  /* margin-right: 10px; */
+}
+
+
+.dynamic-text li span::after{
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  background:white ;
+  border-left: 2px solid black;
+  top: 0;
+  /* left: 0; */
+  animation: typing 1.5s steps(11) infinite;
+ 
+}
+@keyframes typing{
+  100%{
+    left: 100%;
+    margin: 0 -35px 0 35px;
+  }
+}
+.dark-mode .website-name .static-text{
+  color: orangered;
+}
+.dark-mode .website-name {
+  color: white;
+}
+.dark-mode .website-name li{
+  color: white;
+  list-style: none;
+  font-size: 1.8rem;
+  font-weight: bold;
+  letter-spacing: 1.2px;
+  position: relative;
+  overflow: hidden;
+  width: fit-content;
+  /* display: inline-block; */
+  /* margin-right: 10px; */
+}
+.dark-mode .dynamic-text li span::after{
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  background:#333 ;
+  border-left: 2px solid white;
+  top: 0;
+  /* left: 0; */
+  animation: typing 1.5s steps(11) infinite;
+ 
 }
 
 /* Center Links */
@@ -441,10 +528,14 @@ body.dark-mode .calendar-day:hover {
 
 .navbar ul li:hover {
   transform: scale(1.1);
+  color: red;
+  border-radius: 50px;
 }
 
+
 .navbar-links a:hover {
-  color: red;
+  box-shadow: 0 4px 6px rgba(37, 99, 235, 0.5);;
+ 
 }
 
 .center-links li a {
@@ -501,7 +592,7 @@ body.dark-mode .calendar-day:hover {
   z-index: 1;
 
   top: 100%;
-  right: 0;
+  right:0;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   max-width: calc(100vw - 40px);
   overflow: hidden;
@@ -514,7 +605,7 @@ body.dark-mode .calendar-day:hover {
   right: 0%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   opacity: 0;
-  transform: translateY(-10px);
+  transform: translateY(0);
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
@@ -645,12 +736,19 @@ body.dark-mode #theme-switch {
   .navbar ul li a {
     padding: 10px 20px;
     width: 100%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  .navbar ul li a :hover{
+    background-color: #2563eb;
+    color:#000;
+    transform: scale(1.1);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
   }
 
   .navbar ul li:hover .dropdown {
-    position: relative;
-    top: 0;
-    left: 0;
+    /* position: relative; */
+    top: 100%;
+    /* left: 0; */
   }
 
   .hamburger-menu.active + ul {
@@ -667,6 +765,9 @@ body.dark-mode #theme-switch {
 /* Fixing Hamburger Menu Display */
 .hamburger-menu {
   display: none;
+}
+.navbar-links .about-text :hover{
+  color: red;
 }
 
 @media (max-width: 768px) {
@@ -696,14 +797,12 @@ body.dark-mode #theme-switch {
     width: 100%;
   }
 
-  .navbar ul li a {
-    padding: 10px 20px;
-    width: 100%;
-  }
+
 
   /* Dropdown for Hamburger */
   .hamburger-menu .dropdown {
     display: none;
+    /* align-items: center; */
   }
 
   .hamburger-menu.active .dropdown {
@@ -713,11 +812,13 @@ body.dark-mode #theme-switch {
   /* Fixing the space for the dropdown */
   .hamburger-menu .dropdown li {
     padding-left: 0;
+    text-align: center;
   }
 
   .hamburger-menu .dropdown li a {
     padding: 10px 15px;
     display: block;
+    text-align: center;
   }
 }
 
@@ -749,6 +850,7 @@ body.dark-mode #theme-switch {
 
 .about-community:hover {
   transform: translateY(-5px);
+/* color: red; */
 }
 
 .about-community::before {
